--- a/public/home/css/home.css
+++ b/public/home/css/home.css
@@ -70,6 +70,9 @@ ul li{
     margin: auto;
     padding: 10px 50px 10px 50px;
     cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+            user-select: none; /* Standard syntax */
 
 }
 
